--- a/Backend_Processor/DownloadAgent/config.json
+++ b/Backend_Processor/DownloadAgent/config.json
@@ -1,1 +1,67 @@
-{"exportFormat": [{"name": "CVS", "selected": false}, {"name": "Tab delimited", "selected": false}, {"name": "Bro", "selected": false}, {"name": "Snort", "selected": false}, {"name": "Json", "selected": false}], "feedSources": [{"name": "AlienVault", "selected": false}, {"name": "CSIRTG", "selected": false}, {"name": "EmergingThreats", "selected": false}, {"name": "Feodotracker", "selected": false}, {"name": "NoThink", "selected": false}, {"name": "OpenPhish", "selected": false}, {"name": "PhishTank", "selected": false}, {"name": "SANsEDU", "selected": false}, {"name": "SpamHaus", "selected": false}, {"name": "Zeus", "selected": false}], "time": "24"}
+{
+    "exportFormat": [
+        {
+            "name": "CVS",
+            "selected": false
+        },
+        {
+            "name": "Tab delimited",
+            "selected": true
+        },
+        {
+            "name": "Bro",
+            "selected": true
+        },
+        {
+            "name": "Snort",
+            "selected": false
+        },
+        {
+            "name": "Json",
+            "selected": false
+        }
+    ],
+    "feedSources": [
+        {
+            "name": "AlienVault",
+            "selected": false
+        },
+        {
+            "name": "CSIRTG",
+            "selected": false
+        },
+        {
+            "name": "EmergingThreats",
+            "selected": false
+        },
+        {
+            "name": "Feodotracker",
+            "selected": true
+        },
+        {
+            "name": "NoThink",
+            "selected": true
+        },
+        {
+            "name": "OpenPhish",
+            "selected": true
+        },
+        {
+            "name": "PhishTank",
+            "selected": false
+        },
+        {
+            "name": "SANsEDU",
+            "selected": false
+        },
+        {
+            "name": "SpamHaus",
+            "selected": false
+        },
+        {
+            "name": "Zeus",
+            "selected": false
+        }
+    ],
+    "time": "4"
+}
