--- a/Backend_Processor/DownloadAgent/config.json
+++ b/Backend_Processor/DownloadAgent/config.json
@@ -61,6 +61,10 @@
         {
             "name": "Zeus",
             "selected": false
+        },
+        {
+            "name": "NetLab360",
+            "selected": false
         }
     ],
     "time": "4"
