--- a/FrontEnd_GUI/Tims/package.json
+++ b/FrontEnd_GUI/Tims/package.json
@@ -20,10 +20,12 @@
     "@angular/platform-browser": "^6.1.9",
     "@angular/platform-browser-dynamic": "^6.1.9",
     "@angular/router": "^6.1.9",
+    "angular-highcharts": "^6.2.6",
     "bootstrap": "^4.1.3",
     "classlist.js": "1.1.20150312",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "highcharts": "^6.2.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "rxjs": "~6.2.0",
@@ -34,6 +36,7 @@
     "@angular/cli": "^6.2.3",
     "@angular/compiler-cli": "^6.1.9",
     "@angular/language-service": "^6.1.9",
+    "@types/highcharts": "^5.0.31",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "^2.0.4",
     "@types/node": "~8.9.4",
